# Goph-Shop

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod
api/: BUILD.bazel  hello.pb.go  hello.proto  hello_grpc.pb.go
internal/client/: BUILD.bazel  main.go
internal/server/: BUILD.bazel  main.go
