load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/hoangminhphuc/goph-shop/internal/server",
    visibility = ["//visibility:private"],
    deps = [
        "//api",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//:__subpackages__"],
)
